gccida/g2/print_operand
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/print_operand/src/i386.c:6218:1: error: must use 'enum' tag to refer to type 'rtx_code'
rtx_code v12; // edi 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/print_operand/src/i386.c:6222:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v16; // esi 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/print_operand/src/i386.c:6238:1: error: must use 'union' tag to refer to type 'real_extract'
real_extract u; // [rsp+20h] [rbp-38h] BYREF 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/print_operand/src/i386.c:6276:11: error: expected ';' after expression
x = ( rtx)file; 
          ^
          ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/print_operand/src/i386.c:6310:10: error: use of undeclared identifier 'off_672E3A'
fwrite( &off_672E3A, 1uLL, 3uLL, file); 
         ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/print_operand/src/i386.c:6318:10: error: use of undeclared identifier 'off_6CCDC1'
fwrite( &off_6CCDC1, 1uLL, 3uLL, file); 
         ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/print_operand/src/i386.c:6322:10: error: use of undeclared identifier 'off_6CCDBB'
fwrite( &off_6CCDBB, 1uLL, 3uLL, file); 
         ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/print_operand/src/i386.c:6333:10: error: use of undeclared identifier 'unk_672230'
fwrite( &unk_672230, 1uLL, 5uLL, file); 
         ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/print_operand/src/i386.c:6336:10: error: use of undeclared identifier 'off_672232'
fwrite( &off_672232, 1uLL, 3uLL, file); 
         ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/print_operand/src/i386.c:6344:23: error: use of undeclared identifier 'rtx_code'; did you mean 'rtx_cost'?
put_condition_code( ( rtx_code)*( _WORD *)x, ( machine_mode)*( unsigned __int8 *)( x->fld[0].rtwint + 2), 0, 1, file); 
                      ^~~~~~~~
                      rtx_cost
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/print_operand/src/rtl.h:1787:12: note: 'rtx_cost' declared here
extern int rtx_cost                     PARAMS ((rtx, enum rtx_code));
           ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/print_operand/src/i386.c:6344:32: error: invalid operands to binary expression ('int (rtx, enum rtx_code)' (aka 'int (struct rtx_def *, enum rtx_code)') and 'uint16 *' (aka 'unsigned short *'))
put_condition_code( ( rtx_code)*( _WORD *)x, ( machine_mode)*( unsigned __int8 *)( x->fld[0].rtwint + 2), 0, 1, file); 
                    ~~~~~~~~~~~^~~~~~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/print_operand/src/i386.c:6344:48: error: use of undeclared identifier 'machine_mode'
put_condition_code( ( rtx_code)*( _WORD *)x, ( machine_mode)*( unsigned __int8 *)( x->fld[0].rtwint + 2), 0, 1, file); 
                                               ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/print_operand/src/i386.c:6426:6: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
if ( mode_class_0[v20] == MODE_INT ) 
     ^~~~~~~~~~~~
     mode_class
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/print_operand/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/print_operand/src/i386.c:6439:13: error: expected expression
x = ( rtx)( unsigned int)code; 
            ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/print_operand/src/i386.c:6590:17: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v21 = ( __int64)v5[2]; 
                ^~~~~
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/print_operand/src/i386.c:6594:12: error: expected expression
*( _OWORD *)v30.r = *( _OWORD *)u.d.r; 
           ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/print_operand/src/i386.c:6594:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)v30.r = *( _OWORD *)u.d.r; 
   ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/print_operand/src/i386.c:6595:45: error: too many arguments to function call, expected 2, have 4
ereal_to_decimal( ( char *)&u, ( __int64)x, v7, v30); 
~~~~~~~~~~~~~~~~                            ^~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/print_operand/src/real.h:166:1: note: 'ereal_to_decimal' declared here
extern void ereal_to_decimal    PARAMS ((REAL_VALUE_TYPE, char *));
^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/print_operand/src/i386.c:6599:22: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v31.r[2] = ( __int64)v5[2]; 
                     ^~~~~
19 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/print_operand/src/obj/i386.o] Error 1
